# video-semantic-search

./: README.md
backend/: .env.example  pyproject.toml
backend/app/: extract_embeddings.py  init_model.py  main.py
backend/app/core/: config.py
backend/app/schemas/: responses.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/Containers/Footer/: index.tsx
frontend/src/components/Containers/NavBar/: index.tsx
frontend/src/components/Icons/Social/: GitHub.tsx
frontend/src/components/LoadingIcon/: index.tsx
frontend/src/components/Routes/Home/: QueryBar.tsx  VideoPlayer.tsx  VideoUploader.tsx
frontend/src/components/Themes/ThemeToggler/: index.tsx
frontend/src/types/: queryResponse.ts  uploadResponse.ts
